--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -339,7 +339,7 @@
 
         for(var i=0;i<rule_arr.length;i++){
           var j=i+1;
-          var day_num = rule_arr[i];
+          var day_num = parseInt(rule_arr[i]);
           var day_integral = prize_rules[rule_arr[i]]['integral'];
           var day_coupon = prize_rules[rule_arr[i]]['coupon'];
           var str_int ="";
