--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1473,7 +1473,7 @@ button.xui-deleteImageButton{
 	background: none repeat scroll 0 0 #1E8F19;
 	border: 1px solid #1E8F19;
 }
-.pa{
+.xui-keywordBoxDiv-v2.pa{
 	margin-left: 10px;
 	margin-right: 20px;
 }
