--- a/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
+++ b/weapp/apps/customerized_apps/red_envelope/templates/editor/red_envelope_participances.html
@@ -82,7 +82,7 @@ input.xa-select {
 <script id="red_envelope_participances_view" type="text/x-jquery-tmpl">
 	{{if items!='' }}
 	<table class="table table-bordered xb-stripedTable xb-noTdBorder xb-noBottom xb-noBorder xb-theadBg mb10">
-		<thead>
+		<thead data-sort="${data.sortAttr}">
 			<tr>
 				<th width="80" style="text-align:left">
 					{{if items[0].receive_method == "True"}}
@@ -177,6 +177,7 @@ input.xa-select {
 
 <script type="text/javascript">
 $(document).ready(function() {
+    var export_sortAttr = '-created_at';
 	var export_id =window.location.search.split('?id=')[1];
 	var view = new W.view.mall.redMemberFilterView({
         el: '.xa-redMemberFilterView',
@@ -205,10 +206,12 @@ $(document).ready(function() {
 			success: function(data){
 			},
 			error: function(data){
-				W.showHint('error', '发放失败!');
+				W.showHint('error', '获取失败!');
 			}
 		});
 	});
+
+
 
 	var name,grade_id,coupon_status;
 	var selected_ids = [];
@@ -262,6 +265,7 @@ $(document).ready(function() {
     });
 
 	function exportItem(){
+        export_sortAttr = $('#redEnvelopeParticipancesList').find('thead').attr('data-sort');
 		W.getApi().call({
 			method: 'get',
 			app: 'apps/red_envelope',
@@ -272,7 +276,8 @@ $(document).ready(function() {
 				'member_name': name,
 				'grade_id': grade_id,
 				'coupon_status': coupon_status,
-				'selected_ids': selected_ids
+				'selected_ids': selected_ids,
+                'sort_attr': export_sortAttr
 			},
 			success: function(resp){
 				if(resp.code == 200){
