签到：活动盘活

--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -167,7 +167,7 @@
     <div class="wui-rules-div wa-rules-div">
         <div class="wui-rules-intro-div">
             <p class="wui-rules-i-title">签到说明</p>
-            <p class="wui-rules-i-content">签到有礼！</p>
+            <p class="wui-rules-i-content">{{ sign_description }}</p>
         </div>
         <div class="wui-rules-rules-div">
             <p class="wui-rules-i-title">活动规则</p>
