--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -17,7 +17,7 @@
 		<span class="xui-systemName"></span>
 		<div class="xui-headerActionBar">
 			{% if request.user.is_manager %}
-				{% if request.user.username == 'malla' or request.user.username == 'ceshi01' or request.user.username == 'jobs' %}
+				{% if request.user.username == 'ceshi01' or request.user.username == 'jobs' %}
 					<a href="http://fans.weapp.weizzz.com/auth/account_help/" target="_blank"><i class="xui-toolIcon"></i>权限管理</a>
 				{% endif %}
 					<a href="javascript:void(0);" data-toggle="popover" id="mf"><i class="xui-toolIcon"></i>修改密码</a>
@@ -215,7 +215,7 @@
 				if(indexPage === "/") {
 					indexPage = firstNav.url;
 				}
-				
+
 				if(firstNavName === firstNav.name) {
 					hasPermission = true;
 
