修改最后一个一级标签展示方式

--- a/weapp/static_v2/css/base.css
+++ b/weapp/static_v2/css/base.css
@@ -780,7 +780,7 @@ select{
 	list-style: none;
 	background: #0B559F;
 }
-.xui-navBar .xui-i ul li:last-child{
+.xui-navBar .xui-i .xui-i-bigDataTab{
 	float: right;
 }
 .xui-header .xui-navBar .xui-i ul li a{
