fix sign emoji bugs

--- a/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
+++ b/weapp/apps/customerized_apps/sign/templates/webapp/m_sign.html
@@ -183,8 +183,8 @@
 {% block js %}
 <script type="text/javascript">
     W.pageId = "{{request.GET.page_id}}";
-    var member_info = JSON.parse('{{ member_info|safe }}');
-    var prize_info = JSON.parse('{{ prize_info|safe}}');
+    var member_info = JSON.parse('{{ member_info|format_json|safe }}');
+    var prize_info = JSON.parse('{{ prize_info|format_json|safe}}');
     var status = "{{ activity_status }}";
     var resultDialog;
 
