--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -16,12 +16,12 @@
 		</div>
 		<span class="xui-systemName"></span>
 		<div class="xui-headerActionBar">
-			{% if request.user.is_manager %}
-				{% if request.user.username == 'ceshi01' or request.user.username == 'jobs' %}
+			{% if request.user.id == request.manager.id %}
+				{% if request.user.username == 'malla' or request.user.username == 'ceshi01' or request.user.username == 'jobs' %}
 					<a href="http://fans.weapp.weizzz.com/auth/account_help/" target="_blank"><i class="xui-toolIcon"></i>权限管理</a>
 				{% endif %}
 					<a href="javascript:void(0);" data-toggle="popover" id="mf"><i class="xui-toolIcon"></i>修改密码</a>
-				{% if request.user.username == 'ceshi01' or request.user.username == 'jobs' %}
+				{% if request.user.username == 'malla' or request.user.username == 'ceshi01' or request.user.username == 'jobs' %}
 					<a href="{{ fans_host }}/message/message_list/?from=portal" target="_blank"><i class="xui-toolIcon"></i>系统通知<i class="xui-noticyTip" style="display:inline" id ="message_count"></i></a>
 					<a href="{{ fans_host }}/help_center/outline/" target="_blank"><i class="xui-toolIcon"></i>帮助中心</a>
 				{% endif %}
