解决在red测试环境下子账号不能正常显示页面的问题

--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -170,7 +170,7 @@
 	}
 
 	function connectFans(){
-		document.domain = location.host.replace('fans.', '').replace('weapp.', '');
+		document.domain = location.host.replace('fans.weapp.', '').replace('red.weapp.', '').replace('fans.', '').replace('weapp.', '');
 		var hm = document.createElement("iframe");
 		hm.src = "{{ fans_host }}/static/crossdomain.html";
 		hm.style.display = 'none'
