--- a/weapp/templates/content_base_v2.html
+++ b/weapp/templates/content_base_v2.html
@@ -170,7 +170,12 @@
 	}
 
 	function connectFans(){
-		document.domain = location.host.replace('fans.weapp.', '').replace('red.weapp.', '').replace('fans.', '').replace('weapp.', '');
+		if(location.host.indexOf('weizzz.com') > 0) {
+			document.domain = location.host.replace('fans.', '').replace('red.', '').replace('docker.', '');
+		} else {
+			document.domain = location.host.replace('fans.', '').replace('weapp.', '');
+		}
+		
 		var hm = document.createElement("iframe");
 		hm.src = "{{ fans_host }}/static/crossdomain.html";
 		hm.style.display = 'none'
