[b_mall_5433][朱天琦]修复BUG 5433

--- a/weapp/static_v2/js/view/mall_order_filter_view/template.html
+++ b/weapp/static_v2/js/view/mall_order_filter_view/template.html
@@ -77,8 +77,8 @@
 	</div>
 	<div class="xui-col disTc">
 		<div class="xui-i-item">
-			<a herf="javascript:void(0);" class='ml10 xui-dateFilter recently-week-day' data-day=7>最近7天</a>&nbsp;
-			<a herf="javascript:void(0);" class='xui-dateFilter ml20 recently-week-day' data-day=30>最近30天</a>
+			<a href="javascript:void(0);" class='ml10 xui-dateFilter recently-week-day' data-day=7>最近7天</a>&nbsp;
+			<a href="javascript:void(0);" class='xui-dateFilter ml20 recently-week-day' data-day=30>最近30天</a>
 		</div>
 		<div class="xui-i-item" style="margin-left:-48px;">
 			<label>订单来源：</label>
